--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
   padding-top: 0px;
   padding-bottom: 0px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   min-height: 50vh;
   grid-gap: 2rem;
 }
@@ -43,6 +43,7 @@
 .img-container {
   overflow: hidden;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
@@ -164,4 +165,91 @@ main {
 
 .sat-scoring li {
   padding-bottom: 6px;
+}
+
+@media screen and (max-width: 1300px) {
+  .head-container {
+    padding-top: 60px;
+  }
+  .head-container h1 {
+    font-size: 36px;
+  }
+  .head-container p {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .head-container {
+    padding-top: 110px;
+  }
+  .head-container h1 {
+    font-size: 33px;
+  }
+  .head-container p {
+    font-size: 13px;
+  }
+
+  footer {
+    visibility: hidden;
+  }
+
+  .needs-validation {
+    width: 500px;
+    padding-left: 100px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .head-container {
+    padding-top: 160px;
+  }
+  .head-container h1 {
+    font-size: 33px;
+  }
+  .head-container p {
+    font-size: 13px;
+  }
+  .head-container footer {
+    visibility: hidden;
+  }
+
+  .price {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+}
+.media-head-text {
+  display: none;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  margin-left: auto;
+  margin-right: auto;
+}
+.media-head-text h1 {
+  text-align: center;
+}
+.media-head-text p {
+  text-align: center;
+}
+
+@media screen and (max-width: 750px) {
+  .media-head-text {
+    display: block;
+  }
+
+  .primary {
+    visibility: hidden;
+  }
+
+  footer {
+    display: none;
+  }
+
+  .tachs-info {
+    width: 480px;
+  }
+}
+@media screen and (max-width: 1500px) {
+  .price-img {
+    display: none;
+  }
 }/*# sourceMappingURL=styles.css.map */
