--- a/styles.scss
+++ b/styles.scss
@@ -31,7 +31,7 @@
     padding-top: 0px;
     padding-bottom: 0px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
     min-height: 50vh;
     grid-gap: 2rem; 
 
@@ -45,6 +45,7 @@
 .img-container {
     overflow: hidden;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
@@ -172,4 +173,105 @@ main {
 
 .sat-scoring li {
     padding-bottom: 6px;
+}
+
+@media screen and (max-width: 1300px) {
+    .head-container {
+        padding-top: 60px;
+
+        h1 {
+            font-size: 36px;
+        }
+
+        p {
+            font-size: 16px;
+        }
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .head-container {
+        padding-top: 110px;
+
+        h1 {
+            font-size: 33px;
+        }
+
+        p {
+            font-size: 13px;
+        }
+    }
+    
+    footer {
+        visibility: hidden;
+    }
+
+    .needs-validation {
+        width: 500px;
+        padding-left: 100px;
+    }
+
+}
+
+@media screen and (max-width: 900px) {
+    .head-container {
+        padding-top: 160px;
+
+        h1 {
+            font-size: 33px;
+        }
+
+        p {
+            font-size: 13px;
+        }
+
+        footer {
+            visibility: hidden;
+        }
+    }
+
+    .price {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+}
+
+.media-head-text {
+    display: none;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-left: auto;
+    margin-right: auto;
+
+    h1 {
+        text-align: center;
+    }
+
+    p {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .media-head-text {
+        display: block; 
+    }
+
+    .primary {
+        visibility: hidden;
+    }
+
+    footer {
+        display: none;
+    }
+
+    .tachs-info {
+        width: 480px;
+    }
+}
+
+@media screen and (max-width: 1500px) {
+    .price-img {
+        display: none;
+    }
 }
