--- a/styles.scss
+++ b/styles.scss
@@ -38,7 +38,10 @@
     p {
         font-size: 50px;
         position: absolute;
-        z-index: -10;
+        z-index: 10;
+        color: #000;
+        background-color: rgba(255,255,255,0.5);
+        border-radius: 3%;
     }
 }
 
