--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@
 }
 
 main {
-  height: 100vh;
+  height: 120vh;
 }
 
 .main-contact {
@@ -249,4 +249,9 @@ main {
   .price-img {
     display: none;
   }
+}
+.directions {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 10px;
 }/*# sourceMappingURL=styles.css.map */
