--- a/styles.css
+++ b/styles.css
@@ -254,4 +254,8 @@ main {
   display: flex;
   justify-content: center;
   padding-bottom: 10px;
+}
+
+.home-logo img {
+  width: 70%;
 }/*# sourceMappingURL=styles.css.map */
