update branch change

--- a/styles.scss
+++ b/styles.scss
@@ -7,6 +7,9 @@
 .head-sect img {
     object-fit: cover;
     width: 100%;
+    height: 800px;
+    padding-bottom: 500px;
+    padding-top: 50px;
 }
 
 .head-container {
@@ -82,7 +85,7 @@
 }
 
 main {
-    height: 120vh;
+    height: 300vh;
 }
 
 .main-contact {
