--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
+  height: 800px;
+  padding-bottom: 500px;
+  padding-top: 50px;
 }
 
 .head-container {
@@ -78,7 +81,7 @@
 }
 
 main {
-  height: 120vh;
+  height: 300vh;
 }
 
 .main-contact {
