--- a/styles.css
+++ b/styles.css
@@ -14,21 +14,23 @@
 
 .head-text-main {
   width: 700px;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.9);
   border-radius: 5%;
   position: absolute;
-  bottom: 150px;
+  bottom: 40px;
 }
 
 .head-text-main p {
   padding: 10px;
   text-align: center;
+  font-weight: 500;
+  font-size: 23px !important;
 }
 
 .primary-text img {
   -o-object-fit: contain;
      object-fit: contain;
-  height: 100px;
+  height: 180px;
 }
 
 .head-sect h1 {
@@ -63,8 +65,19 @@
   position: absolute;
   z-index: 10;
   color: #000;
-  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 3%;
+}
+.gallery .o {
+  background-color: rgba(255, 165, 0, 0.5);
+}
+.gallery .r {
+  background-color: rgba(255, 0, 0, 0.5);
+}
+.gallery .g {
+  background-color: rgba(0, 255, 0, 0.5);
+}
+.gallery .b {
+  background-color: rgba(0, 0, 255, 0.5);
 }
 
 .img-container {
@@ -202,7 +215,7 @@ main {
     font-size: 36px;
   }
   .head-container p {
-    font-size: 16px;
+    font-size: 17px;
   }
 }
 @media screen and (max-width: 1100px) {
@@ -213,7 +226,7 @@ main {
     font-size: 33px;
   }
   .head-container p {
-    font-size: 13px;
+    font-size: 17px !important;
   }
   footer {
     visibility: hidden;
@@ -231,7 +244,7 @@ main {
     font-size: 33px;
   }
   .head-container p {
-    font-size: 13px;
+    font-size: 17px !important;
   }
   .head-container footer {
     visibility: hidden;
@@ -261,6 +274,7 @@ main {
   }
   .head-text-main {
     width: 600px;
+    bottom: 10px;
   }
   .primary {
     visibility: hidden;
