--- a/styles.scss
+++ b/styles.scss
@@ -298,6 +298,10 @@ main {
 }
 
 @media screen and (max-width: 750px) {
+    .primary-text img {
+        height: 130px;
+    }
+    
     .media-head-text {
         display: block; 
     }
