screen change final

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 
 .head-text-main {
-  width: 700px;
+  width: 750px;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 5%;
   position: absolute;
@@ -290,6 +290,9 @@ main {
   }
 }
 @media screen and (max-width: 1500px) {
+  .head-text-main {
+    bottom: 150px;
+  }
   .price-img {
     display: none;
   }
@@ -303,5 +306,10 @@ main {
 @media screen and (max-width: 550px) {
   .head-text-main {
     width: 350px;
+  }
+}
+@media screen and (max-width: 2000px) {
+  .head-text-main {
+    bottom: 170px;
   }
 }/*# sourceMappingURL=styles.css.map */
