--- a/styles.css
+++ b/styles.css
@@ -308,8 +308,13 @@ main {
     width: 350px;
   }
 }
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
   .head-text-main {
-    bottom: 170px;
+    bottom: 100px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .head-text-main {
+    bottom: 30px;
   }
 }/*# sourceMappingURL=styles.css.map */
