--- a/styles.scss
+++ b/styles.scss
@@ -353,8 +353,14 @@ main {
     }
 }
 
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
     .head-text-main {
-        bottom: 170px;
+        bottom: 100px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .head-text-main {
+        bottom: 30px;
     }
 }
